kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: homework
spec:
  selector:
    matchLabels:
      app: homework-app
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8000
  selector:
      app: homework-app
